# browser-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-GOVERNANCE  LICENSE-MIT  LICENSING.md  MAINTENANCE.md  PRICING.md  README.md  ROADMAP.md  SECURITY.md  llms-install.md  security-insights.yml  server.json
.cargo/: config.toml
.github/: dependabot.yml  release-template.md
coordination/: CHAT.md  RESULTS.md
crates/adapter-agent/: Cargo.toml
crates/adapter-agent/src/: main.rs
crates/adapter-browser/: Cargo.toml
crates/adapter-browser/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: armor.rs  b64.rs  lib.rs  messages.rs
crates/core/src/browser/: advertise.rs  directory.rs  mod.rs  redact.rs  sacred.rs
crates/core/src/governance/: crypto.rs  denial.rs  dispatch.rs  explain.rs  inbound.rs  mod.rs  overlay.rs  ports.rs  templates.rs
crates/core/src/governance/audit/: destinations.rs  mod.rs
crates/core/src/governance/config/: cli.rs  layers.rs  load.rs  mod.rs  reload.rs
crates/core/src/governance/license/: cli.rs  crypto.rs  mod.rs
crates/core/src/governance/managed/: cache.rs  cli.rs  http.rs  mod.rs  status.rs
crates/core/src/governance/manifest/: bundle.rs  document.rs  mod.rs  source.rs
crates/core/src/hub/: endpoint.rs  mod.rs  session.rs
crates/core/src/hub/inbound/: mod.rs  pipe.rs  web.rs
crates/core/src/hub/manage/: assets.rs  doctor.rs  web.rs
crates/core/src/hub/manage/assets/: index.html  manage.js
crates/core/src/hub/outbound/: browser.rs  diagnostics.rs  mod.rs
crates/core/src/install/: clients.rs  mod.rs  native_host.rs  supervisor.rs
crates/core/src/mcp/: browser_batch.rs  form_fill.rs  mod.rs  outcome.rs  pipeline.rs  provenance.rs  refs.rs  script.rs  server.rs  upload_image.rs  validation.rs
docs/: COMPARISON.md  DEV-LOOP.md  MEMORY.md  RELEASE.md  SPEC.md  STATUS.md  public-status.json
examples/: demo-policy.json  developer-observe.json  developer-unrestricted.json  enterprise-healthcare.json  qa-staging.json  research-read-only.json
extension/: README.md  agent-visual-indicator.js  content.js  manifest.json  native-messaging-host.json  options.html  options.js  popup.html  popup.js  service-worker.js
open-spec/: README.md  rawx-capability-model.md  rawx-owasp-agentic-mapping.md
reference/: ANALYSIS.md
scripts/: dev-loop.ps1  gen-icons.py  get-cws-refresh-token.ps1  get.ps1  get.sh  live-demo.ps1  package-extension.ps1  prepare-winget.ps1  publish-extension.ps1  publish-website.ps1  release.ps1  test-e2e.ps1  test-e2e.sh
site/: index.html  install.html
src/: browser.rs  debug.rs  demo.rs  doctor.rs  error.rs  instance.rs  lib.rs  main.rs  observability.rs  origin.rs  proc.rs
src/hub/: mod.rs  (+6 more)
tests/: act_on.rs  adapter_override.rs  adapter_reconnect.rs  all_open_golden.rs  architecture.rs  audit_recorder.rs  bare_invocation.rs  config_schema_golden.rs  console_config_api.rs  console_enable_remote.rs  console_static_routes.rs  control_status.rs  dialog.rs  hot_reload.rs  hub_completion_criteria.rs  hub_identity.rs  hub_isolation.rs  hub_lifecycle.rs  hub_multiplex.rs  hub_queue.rs  hub_role_wiring.rs  inbound_policy.rs  inbound_web_auth.rs  inproc_fixture.rs  install_instance.rs  install_supervisor.rs  license.rs  manage_web_config_api.rs  manage_web_enable_remote.rs  manage_web_routes.rs  manage_web_sessions_api.rs  manifest_validation.rs  mcp_protocol.rs  peer_death.rs  policy_explain.rs  policy_init.rs  policy_preset.rs  policy_simulate.rs  provenance.rs  script_tool.rs  (+6 more)
(+440 files in other folders)
