[package]
name = "ghostlight-adapter-agent"
version = "0.4.1"
edition = "2021"
description = "Ghostlight agent adapter: the MCP-side resilient pass-through the editor launches (ADR-0046)."
publish = false
license = "Apache-2.0 OR MIT"

[[bin]]
name = "ghostlight-adapter-agent"
path = "src/main.rs"

[dependencies]
ghostlight-transport = { path = "../transport" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
