[package]
name = "ghostlight-adapter-browser"
version = "0.4.0"
edition = "2021"
description = "Ghostlight browser adapter: the Chrome native-messaging pass-through the browser launches (ADR-0046)."
publish = false
license = "Apache-2.0 OR MIT"

[[bin]]
name = "ghostlight-adapter-browser"
path = "src/main.rs"

[dependencies]
ghostlight-transport = { path = "../transport" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
